--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,10 @@
         "php": "^8.0.2",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
+        "laravel/jetstream": "^3.0",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
-        "livewire/livewire": "^2.12",
+        "livewire/livewire": "^2.11",
         "vlucas/phpdotenv": "^5.5"
     },
     "require-dev": {
